[package]
name = "os"
version = "0.1.0"
authors = ["suida <suidar@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorithm = { path = "src/algorithm" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"]  }
buddy_system_allocator = { git = "https://github.com/rcore-os/buddy_system_allocator" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
